--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "node-sass": "^6.0.1",
+    "primeicons": "^4.1.0",
+    "primevue": "^3.5.1",
+    "sass-loader": "^12.1.0",
+    "v-debounce": "^0.1.2",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
+    "vue-virtual-scroll-list": "^1.3.9",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
